<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/search_loop"
            android:layout_width="96dp"
            android:layout_height="61dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/search_loop"
            app:tint="?attr/colorControlNormal"
            android:contentDescription="@string/search" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:hint="@string/search"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/sort_by_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/sort_by_name"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/sort_by_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="16dp"
        android:padding="16dp"
        android:text="@string/sort_by_state"
        android:textAlignment="center"
        android:textSize="18sp" />

</LinearLayout>