<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:gravity="center_vertical"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:focusable="true">

    <View
        android:id="@+id/color_indicator"
        android:layout_width="12dp"
        android:layout_height="12dp"
        android:background="@drawable/circle_green" />

    <ImageView
        android:id="@+id/siteLogo"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:src="@drawable/ic_launcher_foreground"
        android:contentDescription="@string/icon_text" />

    <TextView
        android:id="@+id/siteName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_weight="1"
        android:text="@string/Website_name"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="12dp">

        <TextView
            android:id="@+id/siteDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_date"
            android:textSize="12sp"
            android:textColor="?android:attr/textColorSecondary" />

        <TextView
            android:id="@+id/siteTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_time"
            android:textSize="12sp"
            android:textColor="?android:attr/textColorSecondary" />

    </LinearLayout>

</LinearLayout>
